03-k8s-clusters/onprem/overlays/nas/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nas
  annotations:
    argocd.argoproj.io/sync-wave: "4"
