03-k8s-clusters/onprem/overlays/nas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nas
  namespace: nas
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nas
  namespace: nas
  annotations:
    argocd.argoproj.io/sync-wave: "4"
subsets:
  - addresses:
      - ip: 192.168.0.3
    ports:
      - name: http
        port: 5000
        protocol: TCP
