03-k8s-clusters/onprem/overlays/nas/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nas
  namespace: nas
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  parentRefs:
    - name: web-gateway
      namespace: nginx-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      sectionName: http-sonhs
    - name: web-gateway
      namespace: nginx-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      sectionName: https-sonhs
  hostnames:
    - sonhs.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nas
          group: ""
          kind: Service
          port: 80
          weight: 1
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nas-www
  namespace: nas
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  parentRefs:
    - name: web-gateway
      namespace: nginx-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      sectionName: http-wildcard
    - name: web-gateway
      namespace: nginx-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      sectionName: https-wildcard
  hostnames:
    - www.sonhs.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nas
          group: ""
          kind: Service
          port: 80
          weight: 1
